syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.assets";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "atomic_badge.proto";
import "google/protobuf/wrappers.proto";

message IssueTransaction {
  bytes id = 1;
  int32 chain_id = 2;
  bytes sender_public_key = 3;
  bytes name = 4;
  bytes description = 5;
  int64 quantity = 6;
  int32 decimals = 7;
  bool reissuable = 8;
  int64 fee = 9;
  int64 timestamp = 10;
  AtomicBadge atomic_badge = 11;
  google.protobuf.BytesValue script = 12;
  repeated bytes proofs = 13;
  bytes sender_address = 14;
}