syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.assets";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "atomic_badge.proto";

message SponsorFeeTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes asset_id = 3;
  bool is_enabled = 4;
  int64 fee = 5;
  int64 timestamp = 6;
  AtomicBadge atomic_badge = 7;
  repeated bytes proofs = 8;
  bytes sender_address = 9;
}